<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:padding="@dimen/margin_sixteen">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/margin_eight"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/linear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/textTitle"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:text="@string/title_reset_password"
                    android:textSize="@dimen/text_nineteen" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@android:color/white"
                android:orientation="vertical"
                android:paddingBottom="@dimen/margin_sixteen"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linear">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    style="@style/TextEditTextDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_sixteen"
                    android:layout_marginTop="@dimen/margin_sixteen"
                    android:layout_marginEnd="@dimen/margin_sixteen"
                    app:errorEnabled="true"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietEmail"
                        style="@style/TextEditTextDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bcg_register_border_grey"
                        android:drawablePadding="@dimen/margin_sixteen"
                        android:hint="@string/title_email"
                        android:inputType="textEmailAddress"
                        android:padding="@dimen/margin_sixteen" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilToken"
                    style="@style/TextEditTextDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_sixteen"
                    android:layout_marginTop="@dimen/margin_sixteen"
                    android:layout_marginEnd="@dimen/margin_sixteen"
                    app:errorEnabled="true"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietToken"
                        style="@style/TextEditTextDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bcg_register_border_grey"
                        android:drawablePadding="@dimen/margin_sixteen"
                        android:hint="@string/title_code_received_email"
                        android:inputType="text"
                        android:padding="@dimen/margin_sixteen" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    style="@style/TextEditTextDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_sixteen"
                    android:layout_marginTop="@dimen/margin_sixteen"
                    android:layout_marginEnd="@dimen/margin_sixteen"
                    app:errorEnabled="true"
                    app:hintEnabled="false">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tietPassword"
                        style="@style/TextEditTextDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/bcg_register_border_grey"
                        android:drawablePadding="@dimen/margin_sixteen"
                        android:hint="@string/title_password"
                        android:inputType="textPassword"
                        android:padding="@dimen/margin_sixteen"
                        android:paddingBottom="@dimen/margin_twenty_four" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/btnResetPass"
                    style="@style/ButtonGradient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_thirty_two"
                    android:layout_marginTop="@dimen/margin_thirty_two"
                    android:layout_marginEnd="@dimen/margin_thirty_two"
                    android:text="@string/title_send" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>