<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data class="LoginBinding">

        <variable
            name="loginViewModel"
            type="com.luiz.reminder.ui.activities.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:focusable="true"
        android:focusableInTouchMode="true"
        tools:context=".ui.activities.login.LoginActivity">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_thirty_two">

                <TextView
                    android:id="@+id/txtReminder"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_thirty_two"
                    android:gravity="center_horizontal"
                    android:text="@string/title_reminder"
                    android:theme="@style/TextTitleLarge"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    style="@style/TextEditTextDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_thirty_two"
                    android:layout_marginTop="@dimen/margin_thirty_two"
                    android:layout_marginEnd="@dimen/margin_thirty_two"
                    app:error="@{loginViewModel.email.error}"
                    app:errorEnabled="true"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/txtReminder">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etEmail"
                        style="@style/TextEditTextDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_person_login_24dp"
                        android:drawablePadding="@dimen/margin_sixteen"
                        android:hint="@string/title_email"
                        android:inputType="textEmailAddress"
                        android:paddingBottom="@dimen/margin_twenty_four"
                        android:text="@={loginViewModel.email.value}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    style="@style/TextEditTextDefault"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_thirty_two"
                    android:layout_marginTop="@dimen/margin_twenty_four"
                    android:layout_marginEnd="@dimen/margin_thirty_two"
                    app:error="@{loginViewModel.password.error}"
                    app:errorEnabled="true"
                    app:hintEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilEmail">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/etPassword"
                        style="@style/TextEditTextDefault"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock_outline_login_24dp"
                        android:drawablePadding="@dimen/margin_sixteen"
                        android:hint="@string/title_password"
                        android:inputType="textPassword"
                        android:paddingBottom="@dimen/margin_twenty_four"
                        android:text="@={loginViewModel.password.value}" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnLogin"
                    style="@style/ButtonGradient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_thirty_two"
                    android:layout_marginTop="@dimen/margin_thirty_two"
                    android:layout_marginEnd="@dimen/margin_thirty_two"
                    android:enabled="@{loginViewModel.form.valid}"
                    android:onClick="@{() -> loginViewModel.sendLogin()}"
                    android:text="@string/title_login"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tilPassword" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvForgotPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_thirty_two"
                    android:layout_marginTop="@dimen/margin_thirty_two"
                    android:layout_marginEnd="@dimen/margin_thirty_two"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{() -> loginViewModel.forgotPassword()}"
                    android:text="@string/title_forgot_password"
                    android:theme="@style/TextEditTextEighteen"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnLogin" />

                <View
                    android:id="@+id/view"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/margin_one"
                    android:layout_marginStart="@dimen/margin_twenty_four"
                    android:layout_marginTop="@dimen/margin_thirty_two"
                    android:layout_marginEnd="@dimen/margin_twenty_four"
                    android:background="@color/colorGreyLogin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvRegister"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_thirty_two"
                    android:layout_marginTop="@dimen/margin_thirty_two"
                    android:layout_marginEnd="@dimen/margin_thirty_two"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{() -> loginViewModel.register()}"
                    android:theme="@style/TextEditTextEighteenBold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>